# MARL

./: .gitignore  CODE_REVIEW.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  RUST_PERFORMANCE_STUDY.md  demo_rust_integration.py  examples_snake_demo.py  main.py  performance_test.py  pyproject.toml  ruff.toml  visualize_snake.py
.github/workflows/: ci.yml
easy_marl/core/: __init__.py  agents.py  environment.py  training.py
easy_marl/examples/bidding/: __init__.py  make_advanced_params.py  market.py  training.py
easy_marl/examples/electricity_market/: __init__.py  environment.py  observators.py  params.py  training.py
easy_marl/examples/snake/: __init__.py  engine.py  environment.py  observators.py  training.py
easy_marl/src/: __init__.py  agents.py  environment.py  observators.py
experiments/: README.md
experiments/rust_environment_step/: Cargo.toml  README.md  performance_comparison.py  performance_test.py  pyproject.toml  test_rust_only.py
experiments/rust_environment_step/src/: lib.rs
experiments/rust_market_clearing/: README.md
experiments/rust_market_clearing/rust_market/: Cargo.toml  README.md  pyproject.toml
experiments/rust_market_clearing/rust_market/src/: lib.rs
rust_market/: .gitignore
tests/: README.md
tests/unit_tests/: test_agents.py  test_environment.py  test_observators.py  test_rust_market.py
tests/unit_tests/test_bidding/: test_market.py  test_training.py
