[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_marl"
version = "0.1.0"
description = "Gymnasium-compatible MARL framework with electricity market example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "psutil>=7.1.3",
    "stable-baselines3>=2.7.1",
    "torch>=2.9.1",
]

# Basic metadata for public release
license = { text = "MIT" }
authors = [ { name = "William Dennis" } ]
urls = { homepage = "https://github.com/wd7512/MARL" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_marl*"]
exclude = ["outputs*"]
